--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>home_task_2</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
+    <h1>home_task_2</h1>
+    <h2>Задание 2</h2>
+    <div>
+        <table class="link">
+            <tr>
+                <td> Ссылка 1
+                </td>
+                <td> Ссылка 2
+                </td>
+                <td> Ссылка 3
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
