--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div>
         <table class="link">
             <tr>
-                <td> Ссылка 1
+                <td class="name_1"><a href="#">Ссылка 1</a>
                 </td>
-                <td> Ссылка 2
+                <td class="name_2"><a href="#">Ссылка 2</a>
                 </td>
-                <td> Ссылка 3
+                <td class="name_3"><a href="#">Ссылка 3</a>
                 </td>
             </tr>
         </table>
