--- a/index.html
+++ b/index.html
@@ -8,33 +8,35 @@
 <body>
     <h1>home_task_2</h1>
     <h2>Задание 2</h2>
-    <div>
         <table class="link">
             <tr>
-                <td class="name_1"><a href="#">Ссылка 1</a>
+                <td><a class="red" href="#">Ссылка 1</a>
                 </td>
-                <td class="name_2"><a href="#">Ссылка 2</a>
+                <td><a class="blue" href="#">Ссылка 2</a>
                 </td>
-                <td class="name_3"><a href="#">Ссылка 3</a>
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table>
-            <tr>
-                <td>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                </td>
-            </tr>
-            <tr>
-                <td>
+                <td><a class="yellow" href="#">Ссылка 3</a>
                 </td>
             </tr>
         </table>
-    </div>
+    <p></p>
+    <p><h2>Задание 3</h2></p>
+   <div class="parent">
+       <p>Россия</p>
+            <div class="white-color">
+            </div>
+            <div class="blue-color">
+            </div>
+            <div class="red-color">
+            </div>
+   </div>
+       <div>
+            <p>Германия</p>
+                <div class="black-color">
+                </div>
+                <div class="red-color">
+                </div>
+                <div class="yellow-color">
+                </div>
+        </div>
 </body>
 </html>
