--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
     <p><h2>Задание 3</h2></p>
    <div class="parent">
        <p>Россия</p>
-            <div class="white-color">
+            <div class="white-color" class="flag">
             </div>
-            <div class="blue-color">
+            <div class="blue-color" class="flag">
             </div>
-            <div class="red-color">
+            <div class="red-color" class="flag">
             </div>
    </div>
-       <div>
-            <p>Германия</p>
-                <div class="black-color">
-                </div>
-                <div class="red-color">
-                </div>
-                <div class="yellow-color">
-                </div>
+    <div class="child">
+        <p>Германия</p>
+        <div class="black-color"clss="flag">
         </div>
+        <div class="red-color" class="flag">
+        </div>
+        <div class="yellow-color" class="flag">
+        </div>
+    </div>
 </body>
 </html>
