--- a/index.html
+++ b/index.html
@@ -22,21 +22,29 @@
     <p><h2>Задание 3</h2></p>
    <div class="parent">
        <p>Россия</p>
-            <div class="white-color" class="flag">
+            <div class="white-color flag">
             </div>
-            <div class="blue-color" class="flag">
+            <div class="blue-color flag">
             </div>
-            <div class="red-color" class="flag">
+            <div class="red-color flag">
             </div>
    </div>
     <div class="child">
         <p>Германия</p>
-        <div class="black-color"clss="flag">
+        <div class="black-color flag">
         </div>
-        <div class="red-color" class="flag">
+        <div class="red-color flag">
         </div>
-        <div class="yellow-color" class="flag">
+        <div class="yellow-color flag">
         </div>
+    </div>
+    <div class="child-2">
+        <p>Япония</p>
+        <div class="white-color flag-2">
+            <div class="krug red-color">
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
