--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="child-2">
         <p>Япония</p>
         <div class="white-color flag-2">
-            <div class="krug red-color">
+            <div class="circle red-color">
             </div>
         </div>
 
