--- a/index.html
+++ b/index.html
@@ -20,31 +20,49 @@
         </table>
     <p></p>
     <p><h2>Задание 3</h2></p>
-   <div class="parent">
+  <div>
+      <div class="parent">
        <p>Россия</p>
+            <div class="border">
             <div class="white-color flag">
             </div>
             <div class="blue-color flag">
             </div>
             <div class="red-color flag">
             </div>
+            </div>
    </div>
     <div class="child">
         <p>Германия</p>
+        <div class="border">
         <div class="black-color flag">
         </div>
         <div class="red-color flag">
         </div>
         <div class="yellow-color flag">
         </div>
+        </div>
     </div>
     <div class="child-2">
         <p>Япония</p>
+        <div class="border">
         <div class="white-color flag-2">
             <div class="circle red-color">
             </div>
         </div>
-
+        </div>
+    </div>
+    <div class="child-3">
+        <p>Италия</p>
+        <div class="border">
+            <div class="green-color flag-3">
+            </div>
+            <div class="white-color-color flag-3">
+            </div>
+            <div class="red-color flag-3">
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
