--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <title>home_task_2</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
-<body>
+<p>
     <h1>home_task_2</h1>
     <h2>Задание 2</h2>
         <table class="link">
             <tr>
-                <td><a class="red" href="#">Ссылка 1</a>
+                <td class="width-1"><a class="red" href="#">Ссылка 1</a>
                 </td>
-                <td><a class="blue" href="#">Ссылка 2</a>
+                <td class="width-1"><a class="blue" href="#">Ссылка 2</a>
                 </td>
-                <td><a class="yellow" href="#">Ссылка 3</a>
+                <td class="width-2"><a class="yellow" href="#">Ссылка 3</a>
                 </td>
             </tr>
         </table>
     <p></p>
-    <p><h2>Задание 3</h2></p>
+    <p></p>
   <div>
       <div class="parent">
        <p>Россия</p>
@@ -64,5 +64,7 @@
         </div>
     </div>
     </div>
+    <p><h2>Задание 3</h2></p>
+    <p class="size">&#955;<sup style="color: orange">3</sup>-I<sub style="color:lime">1</sub>&#955;<sup style="color: red">2</sup>+I<sub style="color: blue">2</sub>&#955;-I<sub style="color: purple">3</sub>=0</p>
 </body>
 </html>
