--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         </div>
     </div>
     </div>
-    <p><h2>Задание 3</h2></p>
+    <div style="clear: both"></div>
+    <p>&nbsp;</p>
+    <h2>Задание 3</h2>
     <p class="size">&#955;<sup style="color: orange">3</sup>-I<sub style="color:lime">1</sub>&#955;<sup style="color: red">2</sup>+I<sub style="color: blue">2</sub>&#955;-I<sub style="color: purple">3</sub>=0</p>
 </body>
 </html>
